Update applications deploy

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,7 +4,7 @@ eureka:
     hostname: "${HOSTNAME}.eureka"
     lease-renewal-interval-in-seconds: 10
   client:
-    service-url:
+    serviceUrl:
       defaultZone: ${EUREKA_SERVER_ADDRESS}
     fetch-registry: true
     healthcheck:
