--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ eureka:
     hostname: localhost
     lease-renewal-interval-in-seconds: 10
   client:
-    service-url:
+    serviceUrl:
       defaultZone: http://localhost:8761/eureka/
     fetch-registry: true
     healthcheck:
