--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -33,6 +33,8 @@ apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata:
   name: ees-ms-cloud-gateway-svc # Metadata of the resource kind we are creating
+  annotations:
+    service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
 spec:
   selector:
     app: ees-ms-cloud-gateway-app
