--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -33,13 +33,12 @@ apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata:
   name: ees-ms-cloud-gateway-svc # Metadata of the resource kind we are creating
-  annotations:
-    service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
 spec:
   selector:
     app: ees-ms-cloud-gateway-app
   ports:
-    - port: 80 # The port that the service is running on in the cluster
+    - name: https
+      port: 80 # The port that the service is running on in the cluster
       protocol: TCP
       targetPort: 9010 # The port exposed by the service
   type: LoadBalancer # type of the service.
